@@ -4,6 +4,11 @@ xxxx-xx-xx: 0.2.0
 * Fixed handling of 0 hour in Formatter for $12hour and $012hour
 * Added Calendar.fullyear(), converts 2-digit years to 4 digits
 
+Backwards-incompatible changes:
+
+* ISOParser methods for specific formats now returns a full normal
+  date with year, month, and day instead of parsed values
+
 2010-01-24: 0.1.0
 =================
 
